--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,7 +27,7 @@ groq==0.4.1
 
 # Cache & Queue
 redis==5.0.1
-celery==5.3.6
+celery[redis]==5.3.6
 
 # Payments
 stripe==7.11.0
@@ -39,3 +39,8 @@ email-validator==2.1.0
 
 # For PDF generation (If needed)
 reportlab==4.0.9
+
+# Email dependencies
+sendgrid==6.11.0
+jinja2==3.1.3
+python-multipart==0.0.6
